--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,12 @@ body {
   position: relative;
   top: 150px;
 }
+
+#about {
+  position: relative;
+  top: 50px;
+}
+
 #container {
     width: 800px;
     height: 500px;
